--- a/test_index.html
+++ b/test_index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="utf-8">
-    <title>Tests for Simulador de Parcelamento</title>
+    <title>Teste de Simulador de Parcelamento</title>
     <style>
         body { font-family: Arial, sans-serif; padding: 20px; background: #000; color: #f1f1f1; }
         #results { max-width: 800px; margin: auto; background: #111; padding: 18px; border-radius: 8px; box-shadow: 0 4px 10px rgba(0,0,0,.6); }
